Update localization - add Netherland

--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9633,4 +9633,172 @@
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>Systemsteuerungsplc</value>
   </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Heißwaschmodul</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Chemikaliendosierung – Natronlauge-Pumpe</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Chemikaliendosierung – Reinigungsmittelpumpe</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Chemikaliendosierung – Frischwasser</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Chemikaliendosierung – Antischaumpumpe</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Chemikaliendosierung – Manager</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Chemikaliendosierung – Zyklus nach Zeit</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Chemikaliendosierung – Zyklus nach Gewicht</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Mikrofilter - Hauptmotor</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Mikrofilter - Reinigungsventil</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Mikrofilter – Wasserstand</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Mikrofilter – Wasserdurchflussrate</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Mikrofilter - Manager</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Wassertank - Pumpe zu den Reaktoren</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Volle Produktionsgeschwindigkeit</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Geschwindigkeit mit teilweise deaktiviertem Downstream</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Wassertank – Pumpe zur WCE-Reinigung</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Wassertank – Pumpe zum Mikrofilter</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Wassertank – Rührwerk</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Wassertank – Frischwasser</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Wassertank – Wasserabfluss</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Wassertank – Wasserumwälzung</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Wassertank – Wasserleitfähigkeit</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Wassertank – Frischwasserdurchflussrate</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Wärmetauscher – Wasseraustrittstemp.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Wärmetauscher – Dampfdruck</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Wärmetauscher – Wasserdruck</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Heißwäsche – Rührwerke</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>KEINE UNTERE GESCHWINDIGKEIT</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Niedrigere Geschwindigkeit für Downstream nicht in Ordnung</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Heiße Wäsche – Extraktion</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>ENDE DER RAMPE</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Beschleunigung im Gange</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Heißwäsche – Entladungspumpe</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERWASH DEAKTIVIERT</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>Dieses System wurde vom Betreiber deaktiviert. Gehen Sie zu Komponenten-Setup/Konfiguration, um es erneut zu aktivieren</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>KEINE MINDESTGESCHWINDIGKEIT</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Mindestgeschwindigkeit für niedrigen Rührerstrom</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NICHT BEHINDERT</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>Superwash ist deaktiviert</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Heiße Wäsche – Wasserladung</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Heißwäsche – Tankfüllstand</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Heißwäsche – Durchflussrate der Wasserladung</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Sorema-Anfragematerial</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Upstream bereit zur Materialabgabe (externes Signal)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Sorema-Anlagenstatus OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=SOREMA-STATUS OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>EXTERNE ANLAGE BEREIT</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>Externes Werk ist nicht bereit, Material zu liefern</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>Keine Sorema-Alarme</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Alarm im Werk Sorema vorhanden</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE – Wasserreinigung</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Downstream-bereit</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Umwälztank</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Umlauftank – Maximaler Füllstand</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>WCE-Wasserreinigung</value>
+  </data>
 </root>
