--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -9633,4 +9633,172 @@
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>System Control Plc</value>
   </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>מודול כביסה חמה</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>מינון כימי - משאבת סודה קאוסטית</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>מינון כימיקלים - משאבת חומרי ניקוי</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>מינון כימיקלים - מים מתוקים</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>מינון כימי - משאבה נגד קצף</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>מינון כימיקלים - מנהל</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>מינון כימי - מחזור לפי זמן</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>מינון כימי - מחזור לפי משקל</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>מיקרופילטר - מנוע ראשי</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>מיקרופילטר - שסתום ניקוי</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>מיקרופילטר - מפלס מים</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>מיקרופילטר - קצב זרימת מים</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>מיקרופילטר - מנהל</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>מיכל מים - משאבה לכורים</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>מהירות ייצור מלאה</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>מהירות כאשר במורד הזרם מושבת חלקית</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>מיכל מים - ניקוי משאבה ל-WCE</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>מיכל מים - משאבה למיקרופילטר</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>מיכל מים - תסיסה</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>מיכל מים - מים מתוקים</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>מיכל מים - פריקת מים</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>מיכל מים - מחזור מים</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>מיכל מים - מוליכות מים</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>מיכל מים - קצב זרימת מים מתוקים</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>מחליף חום - טמפ' יציאה מים.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>מחליף חום - לחץ קיטור</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>מחליף חום - לחץ מים</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>כביסה חמה - מערבלים</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>אין מהירות נמוכה יותר</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>מהירות נמוכה יותר למורד הזרם לא בסדר</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>כביסה חמה - מיצוי</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>סוף הרמפה</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>האצה בעיצומה</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>כביסה חמה - משאבת פריקה</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERWASH מושבת</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>מערכת זו הושבתה על ידי המפעיל. עבור אל הגדרות/תצורת רכיבים כדי להפעיל זאת שוב</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>ללא מהירות מינימלית</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>מהירות מינימלית לזרם בוחש נמוך</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>לא מושבת</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>Superwash מושבת</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>כביסה חמה - טעינת מים</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>כביסה חמה - רמת מיכל</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>כביסה חמה - קצב זרימת טעינת מים</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>חומר בקשה לסורמה</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>במעלה הזרם מוכן לתת חומר (אות חיצוני)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>מצב צמח סורמה בסדר</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=SOREMA STATUS בסדר)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>צמח חיצוני מוכן</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>המפעל החיצוני אינו מוכן לתת חומר</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>אין אזעקות סורמה</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>אזעקה קיימת במפעל סורמה</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - ניקוי מים</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>מוכן במורד הזרם</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>מיכל מחזור</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>מיכל מחזור - רמה מקסימלית</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>ניקוי מים של WCE</value>
+  </data>
 </root>
