--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9633,4 +9633,172 @@
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>系统控制PLC</value>
   </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>热洗模块</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>化学计量 - 烧碱泵</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>化学计量 - 洗涤剂泵</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>化学剂量 - 淡水</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>化学计量 - 消泡泵</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>化学计量 - 经理</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>化学剂量 - 按时间循环</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>化学剂量 - 按重量循环</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>微过滤器 - 主电机</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>微过滤器 - 清洗阀</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>微过滤器 - 水位</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>微过滤器 - 水流量</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>微过滤器 - 经理</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>水箱 - 泵至反应器</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>全速生产</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>下游部分禁用时的速度</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>水箱 - 泵至 WCE 清洗</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>水箱 - 泵至微过滤器</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>水箱-搅拌器</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>水箱 - 淡水</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>水箱-排水</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>水箱 - 水循环</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>水箱 - 水电导率</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>水箱 - 淡水流量</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>热交换器 - 出水温度.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>热交换器 - 蒸汽压力</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>热交换器 - 水压</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>热水清洗 - 搅拌器</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>不降低速度</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>下游速度较低不可行</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>热洗 - 萃取</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>坡道末端</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>加速进行中</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>热洗-排放泵</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>超级清洗已禁用</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>该系统已被操作员禁用。转到组件设置/配置以再次启用它</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>无最低速度</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>低搅拌器电流的最低速度</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>未禁用</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>超级清洗已禁用</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>热水洗-水费</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>热洗 - 水箱液位</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>热洗 - 充水流量</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>索雷玛索取材料</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>上游准备提供材料（外部信号）</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Sorema 工厂状态正常</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>（1=SOREMA 状态正常）</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>外部设备就绪</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>外部工厂尚未准备好提供材料</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>无索雷玛警报</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Sorema 工厂出现警报</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - 水净化</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>下游就绪</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>再循环罐</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>再循环罐 - 最高液位</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>WCE水净化</value>
+  </data>
 </root>
