--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -9634,4 +9634,172 @@
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>PLC de control del sistema</value>
   </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Módulo de lavado en caliente</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Dosificación de productos químicos: bomba de sosa cáustica</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Dosificación de productos químicos: bomba de detergente</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Dosificación de productos químicos: agua dulce</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Dosificación de químicos - Bomba antiespumante</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Dosificación de Químicos - Gerente</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Dosificación de productos químicos: ciclo por tiempo</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Dosificación de productos químicos: ciclo por peso</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Microfiltro - Motor principal</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Microfiltro - Válvula de limpieza</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Microfiltro - Nivel de agua</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Microfiltro - Caudal de agua</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Microfiltro - Administrador</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Tanque de agua: bomba a reactores</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Velocidad de producción total</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Velocidad con aguas abajo parcialmente deshabilitada</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Tanque de agua: bomba a limpieza del WCE</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Tanque de agua: bomba a microfiltro</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Tanque de agua - Agitador</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Tanque de agua - Agua dulce</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Tanque de agua - Descarga de agua</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Tanque de agua - Recirculación de agua</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Tanque de agua - Conductividad del agua</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Tanque de agua: caudal de agua dulce</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Intercambiador de calor: temperatura de salida de agua.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Intercambiador de calor - Presión de vapor</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Intercambiador de calor - Presión de agua</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Lavado en Caliente - Agitadores</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>SIN VELOCIDAD MÁS BAJA</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Velocidad más baja para aguas abajo no está bien</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Lavado en caliente - Extracción</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>FINAL DE RAMPA</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Aceleración en progreso</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Lavado en caliente - Bomba de descarga</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERLAVADO DESHABILITADO</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>Este sistema ha sido desactivado por el operador. Vaya a Configuración/Configuración de componentes para habilitarlo nuevamente</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>SIN VELOCIDAD MÍNIMA</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Velocidad mínima para corriente de agitador baja</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NO DESACTIVADO</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>El superlavado está deshabilitado</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Lavado en caliente - Carga de agua</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Lavado en caliente - Nivel del tanque</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Lavado en caliente: caudal de carga de agua</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Sorema Solicitar Material</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Upstream Listo Para Dar Material (Señal Externa)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Estado de la planta Sorema OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=ESTADO DE SOREMA OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>PLANTA EXTERNA LISTA</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>Planta Externa No Está Lista para Dar Material</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>Sin alarmas de Sorema</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Alarma presente en Planta Sorema</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - Limpieza de agua</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Listo para aguas abajo</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Tanque de recirculación</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Tanque de recirculación - Nivel máximo</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>Limpieza de agua WCE</value>
+  </data>
 </root>
