--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -9633,4 +9633,172 @@
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>Controle do sistema Plc</value>
   </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Módulo de lavagem quente</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Dosagem Química - Bomba de Soda Cáustica</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Dosagem de Produtos Químicos - Bomba de Detergente</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Dosagem Química - Água Doce</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Dosagem Química - Bomba Antiespumante</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Dosagem Química - Gerente</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Dosagem Química - Ciclo por Tempo</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Dosagem Química - Ciclo por Peso</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Microfiltro - Motor Principal</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Microfiltro - Válvula de Limpeza</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Microfiltro - Nível de Água</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Microfiltro - Taxa de Fluxo de Água</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Microfiltro - Gerenciador</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Tanque de Água - Bomba para Reatores</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Velocidade total de produção</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Velocidade com downstream parcialmente desativado</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Tanque de água - Bomba para limpeza do WCE</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Tanque de água - bomba para microfiltro</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Tanque de Água - Agitador</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Tanque de Água - Água Doce</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Tanque de Água - Descarga de Água</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Tanque de Água - Recirculação de Água</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Tanque de Água - Condutividade da Água</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Tanque de água - Taxa de fluxo de água doce</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Trocador de calor - Temp. saída de água.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Trocador de Calor - Pressão de Vapor</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Trocador de Calor - Pressão da Água</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Lavagem Quente - Agitadores</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>SEM VELOCIDADE BAIXA</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Velocidade mais baixa para downstream não está OK</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Lavagem Quente - Extração</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>FIM DA RAMPA</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Aceleração em andamento</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Lavagem Quente - Bomba de Descarga</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERWASH DESATIVADO</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>Este sistema foi desativado pelo operador. Vá para Configuração/Configuração do Componente para ativá-lo novamente</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>SEM VELOCIDADE MÍNIMA</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Velocidade mínima para baixa corrente do agitador</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NÃO DESATIVADO</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>Superwash está desativado</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Lavagem Quente - Carga de Água</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Lavagem Quente - Nível do Tanque</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Lavagem Quente - Vazão de Carga de Água</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Solicitação de Material Sorema</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Upstream pronto para fornecer material (sinal externo)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Status da planta Sorema OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=ESTADO SOREMA OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>PLANTA EXTERNA PRONTA</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>A planta externa não está pronta para fornecer material</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>Sem alarmes Sorema</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Alarme Presente na Usina Sorema</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - Limpeza de Água</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Pronto para jusante</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Tanque de Recirculação</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Tanque de Recirculação - Nível Máximo</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>Limpeza de água WCE</value>
+  </data>
 </root>
