--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9633,4 +9633,172 @@
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>System Control Plc</value>
   </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Modul de spălare la cald</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Dozare chimică - Pompă cu sodă caustică</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Dozare chimică - Pompă de detergent</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Dozare chimică - apă proaspătă</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Dozare chimică - Pompă antispumă</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Dozare chimică - Manager</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Dozarea substanțelor chimice - Ciclu de timp</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Dozarea substanțelor chimice - Ciclu în funcție de greutate</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Microfiltru - Motor principal</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Microfiltru - Supapă de curățare</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Microfiltru - Nivelul apei</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Microfiltru - Debitul de apă</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Microfiltru - Manager</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Rezervor de apă - Pompă către reactoare</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Viteza maximă de producție</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Viteza cu aval parțial dezactivată</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Rezervor de apă - Pompă La Curățare WCE</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Rezervor de apă - Pompă la microfiltru</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Rezervor de apă - Agitator</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Rezervor de apă - apă dulce</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Rezervor de apă - Deversare de apă</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Rezervor de apă - Recircularea apei</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Rezervor de apă - Conductibilitatea apei</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Rezervor de apă - Debitul de apă dulce</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Schimbător de căldură - Temp.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Schimbător de căldură - Presiune aburului</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Schimbător de căldură - Presiunea apei</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Spălare la cald - Agitatoare</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>FĂRĂ VITEZĂ MICĂ</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Viteză mai mică pentru aval Nu este OK</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Spălare la cald - Extracție</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>SFÂRTUL RAMPEI</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Accelerație în curs</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Spălare la cald - Pompă de descărcare</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERSPĂLARE DEZACTIVATĂ</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>Acest sistem a fost dezactivat de către operator. Accesați Configurarea/Configurarea componentelor pentru a o activa din nou</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>FĂRĂ VITEZĂ MINIMĂ</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Viteză minimă pentru curent scăzut de agitare</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NU DEZACTIVAT</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>Superwash este dezactivat</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Spălare la cald - încărcare cu apă</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Spălare la cald - Nivel rezervor</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Spălare la cald - Debitul de încărcare a apei</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Sorema Solicitare Material</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>În amonte, gata să furnizeze material (semnal extern)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Starea plantei Sorema OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=STAREA SOREMA OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>PLANTE EXTERNĂ GATA</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>Planta externă nu este gata să ofere material</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>Fără alarme Sorema</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Alarma Prezenta in Uzina Sorema</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - Curăţarea apei</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Pregătit pentru aval</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Rezervor de recirculare</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Rezervor de recirculare - Nivel maxim</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>Curăţarea apei WCE</value>
+  </data>
 </root>
